--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "author": "Quench",
   "license": "ISC",
   "devDependencies": {
-    "angular-mocks": "^1.3.15",
-    "browser-sync": "2.6.5",
+    "angular-mocks": "^1.4.0-rc.1",
+    "browser-sync": "^2.6.5",
     "gulp": "3.8.11",
-    "gulp-autoprefixer": "2.1.0",
+    "gulp-autoprefixer": "^2.1.0",
     "gulp-bower": "*",
-    "gulp-cache": "0.2.8",
+    "gulp-cache": "^0.2.8",
     "gulp-concat": "2.5.2",
     "gulp-imagemin": "2.2.1",
     "gulp-inject": "*",
@@ -27,7 +27,7 @@
     "gulp-sass": "1.3.3",
     "gulp-uglify": "1.2.0",
     "jasmine": "*",
-    "karma": "*",
+    "karma": "^0.12.32",
     "karma-firefox-launcher": "*",
     "karma-jasmine": "*",
     "karma-phantomjs-launcher": "^0.1.4",
