--- a/package.json
+++ b/package.json
@@ -1,36 +1,35 @@
 {
-  "name": "Quench",
-  "version": "1.0.0",
-  "description": "A Gulp file and project generator.",
-  "main": "gulpfile.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Quench",
-  "license": "ISC",
-  "devDependencies": {
-    "angular-mocks": "^1.4.0-rc.1",
-    "browser-sync": "^2.6.5",
-    "gulp": "3.8.11",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-bower": "*",
-    "gulp-cache": "^0.2.8",
-    "gulp-concat": "2.5.2",
-    "gulp-imagemin": "2.2.1",
-    "gulp-inject": "*",
-    "gulp-jasmine": "*",
-    "gulp-karma": "*",
-    "gulp-load-plugins": "*",
-    "gulp-plumber": "1.0.0",
-    "gulp-rename": "1.2.2",
-    "gulp-rev": "*",
-    "gulp-sass": "1.3.3",
-    "gulp-uglify": "1.2.0",
-    "jasmine": "*",
-    "karma": "^0.12.32",
-    "karma-firefox-launcher": "*",
-    "karma-jasmine": "*",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-spec-reporter": "0.0.19"
-  }
+    "name": "Workflow-Base",
+    "version": "1.0.0",
+    "description": "A base project for AngularJS frontend with gulp automation and jasmine/karma testing tools",
+    "main": "gulpfile.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "devDependencies": {
+        "angular-mocks": "1.4.0-rc.1",
+        "browser-sync": "2.7.1",
+        "gulp": "3.8.11",
+        "gulp-bower": "0.0.10",
+        "gulp-autoprefixer": "2.2.0",
+        "gulp-concat": "2.5.2",
+        "gulp-inject": "1.2.0",
+        "gulp-imagemin": "2.2.1",
+        "gulp-karma": "0.0.4",
+        "gulp-plumber": "1.0.0",
+        "gulp-cache": "0.2.9",
+        "gulp-jasmine": "2.0.1",
+        "gulp-load-plugins": "0.10.0",
+        "gulp-rename": "1.2.2",
+        "gulp-rev": "3.0.1",
+        "gulp-sass": "1.3.3",
+        "gulp-uglify": "1.2.0",
+        "jasmine": "2.3.1",
+        "jasmine-core": "2.3.0",
+        "karma": "0.12.32",
+        "karma-jasmine": "0.3.5",
+        "karma-phantomjs-launcher": "0.1.4",
+        "karma-spec-reporter": "0.0.19",
+        "karma-firefox-launcher": "0.1.4",
+    }
 }
