--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "angular-route": "*",
     "bootstrap": "~3.0.0",
     "jquery": "~2.0.3",
-    "lodash": "*"
-  }    
+    "lodash": "*",
+    "leaflet": "~0.7.3"
+  }
 }
